@@ -216,6 +216,10 @@ SOURCE=..\..\src\core\hwpm.c
 # End Source File
 # Begin Source File
 
+SOURCE=..\..\src\core\ti_sw\ioports.c
+# End Source File
+# Begin Source File
+
 SOURCE=..\..\src\core\ti_sw\registers.c
 # End Source File
 # Begin Source File
