@@ -1,0 +1,34 @@
+/* Hey EMACS -*- linux-c -*- */
+/* $Id: hw.h 1455 2005-05-31 18:38:03Z roms $ */
+
+/*  TiEmu - an TI emulator
+ *
+ *  Copyright (c) 2005, Romain Lievin
+ *
+ *  This program is free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation; either version 2 of the License, or
+ *  (at your option) any later version.
+ *
+ *  This program is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with this program; if not, write to the Free Software
+ *  Foundation, Inc., 51 Franklin Street - Fifth Floor, Boston, MA 02110-1301, USA.
+ */
+
+#ifndef __TI68K_GSCALES__
+#define __TI68K_GSCALES__
+
+void lcd_hook_hw1(void);
+void lcd_hook_hw2(int refresh);
+
+extern uint32_t lcd_planes[];
+extern uint8_t *lcd_planebufs[];
+extern int lcd_changed;
+extern int ngc;
+
+#endif
